AL FIN SE HIZO LOS FUNDAMENTOS

--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "[VECTORES AUTOREGRESIVOS (VAR)](https://github.com/Ortiz-Cevallos/VAR/tree/master/docs/PDF)"
+title: "[VECTORES AUTOREGRESIVOS (VAR)](https://ortiz-cevallos.github.io/VAR/PDF.pdf)"
 author: "[Luis Ortiz-Cevallos](https://ortiz-cevallos.github.io/MYSELF/)"
 date: "`r Sys.Date()`"
 output:
@@ -20,7 +20,7 @@ link-citations: true
 <script>
    $(document).ready(function() {
      $head = $('#header');
-     $head.prepend('<img src=\"logo2.png\" style=\"float: right;width: 50px;\"/>')
+     $head.prepend('<img src=\"logo2.png\" style=\"float: right;width: 100px;\"/>')
    });
 </script>
 
